# play-later-with-agents

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  WARP.md  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: api-tests.yml
api/: README.md  alembic.ini  logging.yaml  pyproject.toml  test.db
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 20250901_195732_initial.py
api/app/: auth.py  config.py  db.py  db_models.py  exception_handlers.py  main.py  models.py  schemas.py  session_store.py  utils.py
api/app/routers/: collection.py  health.py  playthroughs.py
api/app/services/: __init__.py  collection_service.py  deps.py  errors.py  playthroughs_service.py
api/docs/: README.md  feat-core-game-models-tasks.md  infrastructure-deployment-tasks.md
api/docs/api-spec/: .gitkeep  collection-endpoints.md  filtering-examples.md  playthrough-endpoints.md
api/docs/architecture/: .gitkeep  authentication.md  entities.md  filtering.md  mappers.md
api/docs/cognito-oauth/: README.md  api-implementation.md  architecture-overview.md  infrastructure-setup.md  ui-implementation.md
api/docs/database/: .gitkeep  migrations.md  schema-design.md
api/scripts/: generate_schema.py
api/tests/: conftest.py  test_auth.py  test_collection.py  test_db.py  test_errors.py  test_health.py  test_migrations.py  test_orm.py  test_playthroughs.py  test_schemas.py  test_session.py
contract/: openapi.json
infra/: README.md
web/: .eslintignore  README.md  eslint.config.js  package.json  vite.config.ts
