[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.22.0"
pydantic-settings = "^2.0.0"

[tool.poetry.scripts]
generate-schema = "scripts.generate_schema:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
pytest = "^8.3.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
