[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.22.0"
pydantic-settings = "^2.0.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
generate-schema = "scripts.generate_schema:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
pytest = "^8.3.0"
httpx = "^0.27.0"
alembic = "^1.13.2"
pylint = "^3.0.0"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
"app/routers/**/*.py" = ["B008"]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring", 
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "duplicate-code",
    "fixme",
    "too-many-positional-arguments",
    "no-member",
    "not-callable",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "db"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
